--- a/object-storage-simulation/modules/extent-node/pom.xml
+++ b/object-storage-simulation/modules/extent-node/pom.xml
@@ -6,7 +6,19 @@
         <groupId>com.objectstorage</groupId>
         <artifactId>object-storage-simulation</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
-    <artifactId>common</artifactId>
+    <artifactId>extent-node</artifactId>
     <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.objectstorage</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project> 
